<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/sh.siava.pixelxpert.ui.preferencesearch">

	<sh.siava.pixelxpert.ui.preferences.IllustrationPreference
		android:key="misc_illustration"
		app:lottie_rawRes="@raw/android_device"
		search:ignore="true" />

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/general_section"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="true"
			android:key="PXInSettings"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/px_in_settings_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="advancedPowerMenu"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/advanced_power_menu_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="disableScreenshotSound"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/screenshot_sound_disable_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="EnableClipboardSmartActions"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/clipboard_smart_actions_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="ScreenshotChordInsecure"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/screenshot_insecure"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="InsecureScreenRecord"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/screen_record_insecure"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="allScreenRotations"
			android:summary="@string/allow_all_screen_rotations_summary"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/allow_all_screen_rotations"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="noCutoutEnabled"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/force_no_cutout"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="BrightnessRange"
			android:summary="@string/brightness_range_not_linear"
			android:title="@string/brightness_range_title"
			app:defaultValue="0,100"
			app:iconSpaceReserved="false"
			app:maxVal="100"
			app:minVal="0"
			app:tickInterval=".01"
			app:valueCount="2" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="displayOverrideEnabled"
			android:summary="@string/display_resolution_switch_summary"
			android:title="@string/display_resolution_switch_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="displayOverride"
			android:title="@string/display_resolution_title"
			app:defaultValue="100"
			app:iconSpaceReserved="false"
			app:maxVal="200"
			app:minVal="50"
			app:tickInterval="5"
			app:valueCount="1" />

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="FastChargingWattage"
			android:title="@string/fast_charging_threshold_title"
			app:defaultValue="5"
			app:iconSpaceReserved="false"
			app:maxVal="50"
			app:minVal="5"
			app:tickInterval="5"
			app:valueCount="1" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="sysui_tuner"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="SystemUI Tuner"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPreference
			android:key="remap_physical_buttons"
			android:title="@string/remap_physical_buttons_title"
			app:fragment="sh.siava.pixelxpert.ui.fragments.PhysicalButtonRemapFragment"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="controlFlashWithVolKeys"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/control_flashlight_with_volume_keys"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="AnimateFlashlight"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/flashlight_fade_effect"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPrimarySwitchPreference
			android:defaultValue="false"
			android:fragment="sh.siava.pixelxpert.ui.fragments.SleepOnFlatFragment"
			android:key="SleepOnFlatScreen"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/sleep_on_flat_screen_title"
			app:iconSpaceReserved="false" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/volume_panel_category"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:layout_width="wrap_content"
			android:key="volumeStps"
			android:title="@string/volume_button_step_title"
			app:defaultValue="10"
			app:iconSpaceReserved="false"
			app:maxVal="50"
			app:minVal="10"
			app:seekBarIncrement="5"
			app:updatesContinuously="true" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/monitoring_category_title"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialPreference
			android:key="netstat_header"
			android:title="@string/netstat_header"
			app:fragment="sh.siava.pixelxpert.ui.fragments.NetworkStatFragment"
			app:iconSpaceReserved="false" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/system_time_title"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="SyncNTPTime"
			android:summaryOff="@string/general_off"
			android:summaryOn="@string/general_on"
			android:title="@string/sync_ntp_time_title"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialRangeSliderPreference
			android:key="TimeSyncInterval"
			android:title="@string/ntp_time_interval_title"
			app:defaultValue="24"
			app:iconSpaceReserved="false"
			app:maxVal="120"
			app:minVal="12"
			app:tickInterval="12"
			app:valueCount="1" />

		<sh.siava.pixelxpert.ui.preferences.MaterialEditTextPreference
			android:key="NTPServers"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:summary="@string/ntp_servers_summary"
			android:title="@string/ntp_servers_title"
			app:defaultValue="0.pool.ntp.org;1.pool.ntp.org"
			app:iconSpaceReserved="false" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPreference
			android:key="SyncNTPTimeNow"
			android:title="@string/sync_ntp_time_now_title"
			app:iconSpaceReserved="false" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:title="@string/diagnostics_category_title"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<sh.siava.pixelxpert.ui.preferences.MaterialSwitchPreference
			android:defaultValue="false"
			android:key="verboseLogging"
			android:summary="@string/verbose_logging_summary"
			android:title="@string/verbose_logging_title"
			app:iconSpaceReserved="false" />

	</sh.siava.pixelxpert.ui.preferences.MaterialPreferenceCategory>
</PreferenceScreen>
