<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/sh.siava.pixelxpert.ui.preferencesearch">

	<PreferenceCategory
		android:key="search_category"
		android:layout="@layout/settingslib_preference_category_no_title">

		<sh.siava.pixelxpert.ui.preferences.preferencesearch.SearchPreference android:key="searchPreference" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="top_level_category"
		android:layout="@layout/settingslib_preference_category_no_title">

		<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="sh.siava.pixelxpert.ui.fragments.SystemUiFragment"
			app:icon="@drawable/ic_settings_quicksettings"
			app:key="systemui_header"
			app:summary="@string/systemui_summary"
			app:title="@string/systemui_title"
			search:ignore="true" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="sh.siava.pixelxpert.ui.fragments.ThemingFragment"
			app:icon="@drawable/ic_settings_themes"
			app:key="theming_header"
			app:summary="@string/appearance_summary"
			app:title="@string/appearance_title"
			search:ignore="true" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="sh.siava.pixelxpert.ui.fragments.LockScreenFragment"
			app:icon="@drawable/ic_settings_lockscreen"
			app:key="lockscreen_header"
			app:summary="@string/lock_security_summary"
			app:title="@string/lock_security_title"
			search:ignore="true" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="mid_level_category"
		android:layout="@layout/settingslib_preference_category_no_title">

		<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="sh.siava.pixelxpert.ui.fragments.NavFragment"
			app:icon="@drawable/ic_settings_navigation"
			app:key="nav_header"
			app:summary="@string/nav_header_summary"
			app:title="@string/nav_header"
			search:ignore="true" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="sh.siava.pixelxpert.ui.fragments.MiscFragment"
			app:icon="@drawable/ic_settings_misc"
			app:key="misc_header"
			app:summary="@string/system_hardware_summary"
			app:title="@string/system_hardware_title"
			search:ignore="true" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="bottom_level_category"
		android:layout="@layout/settingslib_preference_category_no_title">

		<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="sh.siava.pixelxpert.ui.fragments.HotSpotFragment"
			app:icon="@drawable/ic_settings_wifi_hotspot"
			app:key="hotspot_header"
			app:summary="@string/connectivity_summary"
			app:title="@string/connectivity_title"
			search:ignore="true" />

		<sh.siava.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="sh.siava.pixelxpert.ui.fragments.AppsCallsFragment"
			app:icon="@drawable/ic_settings_package_manager"
			app:key="apps_calls_header"
			app:summary="@string/apps_calls_summary"
			app:title="@string/apps_calls_title"
			search:ignore="true" />

	</PreferenceCategory>

</PreferenceScreen>